--- a/react/package.json
+++ b/react/package.json
@@ -30,6 +30,7 @@
     "@testing-library/user-event": "^13.4.1",
     "@types/jest": "^27.0.2",
     "@types/react-router-dom": "^5.3.1",
+    "@types/react-table": "^7.7.9",
     "autoprefixer": "^10.3.7",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
