--- a/react/package.json
+++ b/react/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@auth0/auth0-react": "^1.8.0",
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
