--- a/react/package.json
+++ b/react/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@auth0/auth0-react": "^1.8.0",
-    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -21,8 +20,7 @@
     "react-icons": "^4.3.1",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "6",
-    "react-scripts": "5.0.0",
-    "react-table": "^7.7.0"
+    "react-scripts": "5.0.0"
   },
   "devDependencies": {
     "@craco/craco": "^6.3.0",
@@ -31,7 +29,6 @@
     "@testing-library/user-event": "^13.4.1",
     "@types/jest": "^27.0.2",
     "@types/react-router-dom": "^5.3.1",
-    "@types/react-table": "^7.7.9",
     "autoprefixer": "^10.3.7",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
